--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustdns"
 version = "0.1.0"
-authors = ["***REMOVED***"]
+authors = ["Conblem <mail@conblem.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,5 +9,4 @@ edition = "2018"
 [dependencies]
 trust-dns-server = { version  = "0.19.2", features = ["dns-over-rustls"]}
 trust-dns-resolver = "0.19.2"
-trust-dns-client = "0.19.2"
-tokio = { version = "0.2.1", features = ["full"] }
+tokio = { version = "0.2.1", features = ["macros"] }
